--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -189,6 +189,9 @@
         <activity
             android:name=".SolarisActivity"
             android:exported="true" />
+        <activity
+            android:name=".VeltlineskecerveneraneActivity"
+            android:exported="true" />
 
 
 
