--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,6 +192,9 @@
         <activity
             android:name=".VeltlineskecerveneraneActivity"
             android:exported="true" />
+        <activity
+            android:name=".VeltlineskezeleneActivity"
+            android:exported="true" />
 
 
 
