--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AromatickeActivity"
+            android:name=".AromatickeActivityBile"
+            android:exported="true" />
+        <activity
+            android:name=".AromatickeActivityCervene"
             android:exported="true" />
         <activity
             android:name=".VinarskyActivity"
